--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 nalgebra = "0.31"
-num = "0.4"
+num-bigint = "0.4"
 once_cell = "1"
-tokio = {version ="1", features = ["process", "rt", "macros", "io-util"]}
+tokio = {version ="1", features = ["process", "rt","rt-multi-thread", "macros", "io-util"]}
+serde = {version ="1", features = ["derive"]}
+serde_json = {version ="1"}
