added license info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 name = "fibonacci_primes"
 version = "0.1.0"
 edition = "2021"
-
+license = "MIT OR Apache-2.0"
+authors = ['aiden2207']
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
