added correct file

--- a/competitors/config.json
+++ b/competitors/config.json
@@ -1,25 +1,6 @@
 {
   "competitors": [
     {
-      "name": "anders_kaseorg",
-      "setup": [
-        {
-          "command": "cargo",
-          "args": [
-            "build",
-            "--release"
-          ]
-        }
-      ],
-      "run": {
-        "command": "cargo",
-        "args": [
-          "run",
-          "--release"
-        ]
-      }
-    },
-    {
       "name": "example",
       "setup": [
         {
@@ -35,6 +16,25 @@
         "args": [
           "../run_rust.sh",
           "target/release/example"
+        ]
+      }
+    },
+    {
+      "name": "anders_kaseorg",
+      "setup": [
+        {
+          "command": "cargo",
+          "args": [
+            "build",
+            "--release"
+          ]
+        }
+      ],
+      "run": {
+        "command": "sh",
+        "args": [
+          "../run_rust.sh",
+          "target/release/fibprimes"
         ]
       }
     }
